# auto-workflow

./: .gitignore  .pre-commit-config.yaml  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  RELEASE.md  codecov.yml  mkdocs.yml  pyproject.toml
.aw_artifacts/: 6258e877-29f3-40de-83c0-46152bd1026f
.github/workflows/: ci.yml  docs.yml  pypi-flow.yml
agents/: BUILDER_AGENT.md  REVIEWER_AGENT.md
agents/modules/: README.md  template.md
auto_workflow/: __init__.py  __main__.py  artifacts.py  build.py  cache.py  cli.py  config.py  context.py  dag.py  env_overrides.py  events.py  exceptions.py  execution.py  fanout.py  flow.py  lifecycle.py  logging_middleware.py  metrics.py  metrics_provider.py  middleware.py  scheduler.py  secrets.py  task.py  tracing.py  types.py  utils.py
auto_workflow/benchmarks/: __init__.py  throughput.py
auto_workflow/connectors/: __init__.py  adls2.py  base.py  exceptions.py  postgres.py  registry.py  types.py  utils.py
auto_workflow/executors/: async_executor.py  base.py  process_executor.py  thread_executor.py
benchmarks/: __init__.py  throughput.py
docs/: api-reference.md  caching-artifacts.md  cli.md  configuration.md  connectors.md  dynamic-fanout.md  examples.md  extensibility.md  flows.md  getting-started.md  index.md  middleware-events.md  observability.md  priority-cancellation.md  quickstart.md  retries-timeouts-failure.md  secrets.md  testing.md
docs/concepts/: tasks.md
docs/connectors/: adls2.md  postgres.md
docs/examples/: adls2_csv_roundtrip.md  general_examples.md  postgres_fanout.md
examples/: adls_csv_flow.py  concurrent_priority.py  data_pipeline.py  dot_export_example.py  dynamic_fanout.py  mixed_execution.py  postgres_fanout_flow.py  retries_timeouts.py  secrets_and_artifacts.py  tracing_custom.py
features/: SERVER.md  adls_impl_plan.md  production-connectors.md
test_helpers/: docker-compose.yml  wait-for-postgres.sh
tests/: conftest.py  test_additional_coverage.py  test_additional_depth.py  test_artifact_persistence.py  test_basic.py  test_benchmark_smoke.py  test_broad_coverage.py  test_cache_ttl.py  test_cancellation.py  test_cli_and_logging.py  test_cli_describe_list.py  test_cycle_detection.py  test_dynamic_fanout_runtime.py  test_dynamic_priority_interplay.py  test_edge_cases.py  test_even_more_depth.py  test_failure_policies.py  test_filesystem_artifacts.py  test_graceful_cancellation_dynamic.py  test_introspection.py  test_middleware_metrics.py  test_nested_dynamic_fanout.py  test_priority_scheduling.py  test_result_cache_filesystem.py  test_threading_behavior.py  test_tracing_spans.py
tests/artifacts/: test_artifact_persistence.py  test_filesystem_json_artifacts.py  test_filesystem_missing_raises.py  test_filesystem_store.py
tests/benchmark/: test_benchmark_smoke.py
tests/caching/: test_filesystem_and_lru.py  test_result_cache_filesystem.py
tests/cli/: test_cli_and_logging.py  test_cli_describe_list.py  test_cli_errors.py  test_cli_list_inprocess.py  test_cli_validation.py  test_main_module_entrypoint.py
tests/config/: test_config_edge_cov.py
tests/connectors/: adls2_fakes.py  test_adls2_coverage.py  test_adls2_unit.py  test_connectors_init_cov.py  test_connectors_init_unit.py  test_contracts.py  test_import_smoke.py  test_postgres_copy_unit.py  test_postgres_more_unit.py  test_postgres_sqlalchemy_unit.py  test_postgres_unit.py  test_registry.py  test_registry_cov_unit.py  test_registry_lazy_attr_unit.py  test_types_unit.py  test_utils_overrides.py  test_utils_secrets_legacy_unit.py  test_utils_unit.py
tests/core/: test_context_errors.py  test_cycle_detection.py  test_dag_exports.py  test_env_overrides.py  test_execution_pool_env.py  test_fail_fast_cancels_pending.py  test_flow_exports.py  test_flow_trivial.py  test_package_init_import.py  test_secrets_providers.py  test_task_and_execution_small.py  test_threading_behavior.py  test_utils_extra.py
tests/dynamic/: test_describe_export_dynamic.py  test_fanout_dynamic_nested.py  test_fanout_immediate.py  test_graceful_cancellation_dynamic.py  test_nested_dynamic_fanout.py
tests/hardening/: test_cache_hardening.py  test_deterministic_ordering.py  test_dynamic_fanout_concurrency.py  test_inflight_dedup_and_metrics.py  test_lifecycle_and_artifacts.py
tests/integration/adls2/: test_adls2_flow_integration.py
tests/integration/flow/: test_flow_core_integration.py
tests/integration/postgres/: test_postgres_flow_integration.py
tests/observability/: test_event_bus.py  test_logging_middleware_extra.py
tests/regression/: test_additional_coverage.py  test_additional_depth.py  test_edge_cases.py  test_even_more_depth.py
tests/scheduler/: test_dynamic_priority_interplay.py  test_failure_policies.py  test_priority_scheduling.py
